...
                    }
                }
            }
            .smbcBackground()
            .toolbar {
                ToolbarItem(placement: .navigationBarTrailing) {
                    Button("Show Visits") {
                        showVisits.toggle()
                    }
                }
            }
            .sheet(isPresented: $showVisits) {
                RestaurantVisitsView(restaurant: restaurant)
...
